<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Board Gamer Diary</string>
    <string name="hint_new_nickname">Nickname</string>
    <string name="hint_new_first_name">First name</string>
    <string name="hint_new_surname">Surname</string>
    <string name="hint_home_city">Home city</string>
    <string name="text_day_of_birth">Day</string>
    <string name="month_of_birth">Month</string>
    <string name="text_year_of_birth">Year of birth</string>
    <string name="select_day_of_birth" translatable="false">31</string>
    <string name="select_month_of_birth">JUN</string>
    <string name="select_year_of_birth" translatable="false">2000</string>
    <string name="hint_contact_number">Contact number</string>
    <string name="hint_email">Email</string>
    <string name="hint_hobbies">A little about myself.</string>

    <string name="click_any_edit_text_field">To edit a profile, click the \"Edit\" button at the bottom of the screen</string>

    <string-array name="months_array">
        <item>@string/month_jan</item>
        <item>@string/month_feb</item>
        <item>@string/month_mar</item>
        <item>@string/month_apr</item>
        <item>@string/month_may</item>
        <item>@string/month_jun</item>
        <item>@string/month_jul</item>
        <item>@string/month_aug</item>
        <item>@string/month_sep</item>
        <item>@string/month_oct</item>
        <item>@string/month_nov</item>
        <item>@string/month_dec</item>
        <item>@string/month_error</item>
    </string-array>

    <string name="month_jan">JAN</string>
    <string name="month_feb">FEB</string>
    <string name="month_mar">MAR</string>
    <string name="month_apr">APR</string>
    <string name="month_may">MAY</string>
    <string name="month_jun">JUN</string>
    <string name="month_jul">JUL</string>
    <string name="month_aug">AUG</string>
    <string name="month_sep">SEP</string>
    <string name="month_oct">OCT</string>
    <string name="month_nov">NOV</string>
    <string name="month_dec">DEC</string>
    <string name="month_error">UNKNOWN!</string>
    <string name="choose_camera">Take Photo</string>
    <string name="choose_gallery">Choose from Gallery</string>
    <string name="select_option_profile_image">Select option</string>
    <string name="save_profile">Profile changes have been saved</string>
    <string name="collection">Collection</string>
    <string name="wishlist">Wishlist</string>
    <string name="want_to_play">Want to play</string>
    <string name="text_number_games">Number games</string>
    <string name="_0" translatable="false">0</string>
    <string name="board_game_title">Board Game Title</string>
    <string name="year_and_month_of_purchase">Year and month of purchase</string>
    <string name="my_score">My score</string>
    <string name="new_game_in_collection_default_value">New My Game</string>
    <string name="remove_element_from_my_collectoin">Remove a game from my collection</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="i_am_sure">I\'m sure!</string>
    <string name="i_changed">I changed!</string>
    <string name="button_addNewContact">Add new contact</string>
    <string name="editText_yearPurchase">Year</string>
    <string name="editText_monthPurchase">Month</string>
    <string name="editText_boardgame_name">Boardgame Name</string>
    <string name="contentDescription_add_boardgame_in_wishlist">Add boardgame in Wishlist</string>
    <string name="descriptionContext_add_boardgame_in_want_to_play_list">Add boardgame in want to play list</string>
    <string name="button_save">Save</string>
    <string name="button_edit">Edit</string>
    <string name="editText_hint_new_contact_phone">New Contact Phone</string>
    <string name="editText_hint_new_nickname">New nickname</string>
    <string name="editText_hint_new_firstname">New firstname</string>
    <string name="editText_hint_new_surname">New surname</string>
    <string name="button_invitation_a_meeting">Invitation a meeting</string>
    <string name="button_view_meetings">View meetings</string>
    <string name="textView_when_s_the_meeting">When\'s the meeting?</string>
    <string name="editText_day">Day</string>
    <string name="editText_month">Month</string>
    <string name="editText_year">Year</string>
    <string name="editText_where_s_the_meeting">Where\'s the meeting?</string>
    <string name="editText_hint_please_write_the_name_of_the_meeting_place">Please write the name of the meeting place.</string>
    <string name="textView_who_s_the_meeting_with">Who\'s the meeting with?</string>
    <string name="editText_include_the_contacts_with_whom_to_meet">Include the contacts with whom to meet.</string>
    <string name="editText_specify_the_games_to_be_played">Specify the games to be played.</string>
    <string name="button_send_invitation">Add to calendar</string>
    <string name="textView_what_are_we_playing">What are we playing?</string>
    <string name="textView_profile">Profile</string>
    <string name="textView_myGames">My Games</string>
    <string name="textView_schedule_meeting">Schedule meeting</string>
    <string name="textView_friends">Friends</string>
    <string name="textView_statistics">Statistics</string>
</resources>